added audios and other shit

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -54,3 +54,24 @@ p {
 .card-featured {
   width: 400px;
 }
+
+.search-box {
+  padding-left : 200px;
+  padding-right: 200px;
+}
+
+#interview-table {
+  td {
+    font-size: 20px;
+  }
+
+  th {
+    font-size: 22px;
+  }
+}
+
+.interview-audio {
+  margin-top: 10px;
+  margin-left: 0px;
+  width: 100%;
+}
