--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,16 +1,16 @@
 <p class="center">The Regional Archive of Pakistan aims to document the experiences of those individuals who witnessed and went through the partition of 1947.</p>
 
-  <div class="divider"></div>
-
+<div class="divider"></div>
 
 <br>
 <div class="row">
   <h4 class="center"> Featured Interviews</h4>
 </div> 
 
+<!-- Featured Section -->
 <div class="row">
   <div class="col s12 m4">
-    <div class="card card-featured">
+    <div class="card card-featured hvr-grow">
       <div class="card-image">
         <img class="featured-card-image" src="http://www.hindustantimes.com/rf/image_size_640x362/HT/p2/2016/10/25/Pictures/_fc37fe9e-9a6a-11e6-84cd-7afcc7591aa7.jpg">
       </div>
@@ -18,33 +18,38 @@
         <span class="card-title black-text">Interview 1</span>
         <p>Lorem ipsum dolor sit amet, te sea amet rebum expetenda. Elitr cotidieque vel cu, altera nominavi tincidunt quo et. Elit legere verterem at nam, ei nam odio propriae philosophia. Qui eripuit honestatis consequuntur ad, ne impedit recusabo euripidis vix.</p>
       </div>
-      
     </div>
   </div>
 
   <div class="col s12 m4">
-    <div class="card card-featured">
+    <div class="card card-featured hvr-grow">
       <div class="card-image">
-        <img class="featured-card-image" src="http://www.hindustantimes.com/rf/image_size_640x362/HT/p2/2016/10/25/Pictures/_fc37fe9e-9a6a-11e6-84cd-7afcc7591aa7.jpg">
+        <img class="featured-card-image" src="http://s1.ibtimes.com/sites/www.ibtimes.com/files/styles/lg/public/2014/01/29/hardeep.jpg">
       </div>
       <div class="card-content">
         <span class="card-title black-text">Interview 2</span>
         <p>Lorem ipsum dolor sit amet, te sea amet rebum expetenda. Elitr cotidieque vel cu, altera nominavi tincidunt quo et. Elit legere verterem at nam, ei nam odio propriae philosophia. Qui eripuit honestatis consequuntur ad, ne impedit recusabo euripidis vix.</p>
-      </div>
-      
+      </div>    
     </div>
   </div>
 
   <div class="col s12 m4">
-    <div class="card card-featured">
+    <div class="card card-featured hvr-grow">
       <div class="card-image">
-        <img class="featured-card-image" src="http://www.hindustantimes.com/rf/image_size_640x362/HT/p2/2016/10/25/Pictures/_fc37fe9e-9a6a-11e6-84cd-7afcc7591aa7.jpg">
+        <img class="featured-card-image" src="https://i.pinimg.com/736x/7d/7a/71/7d7a71ccc6d20354409a8bfb5588597d--independence-of-india-mass-migration.jpg">
       </div>
       <div class="card-content">
         <span class="card-title black-text">Interview 3</span>
         <p>Lorem ipsum dolor sit amet, te sea amet rebum expetenda. Elitr cotidieque vel cu, altera nominavi tincidunt quo et. Elit legere verterem at nam, ei nam odio propriae philosophia. Qui eripuit honestatis consequuntur ad, ne impedit recusabo euripidis vix.</p>
       </div>
-      
     </div>
   </div>
+</div>
+<!-- Featured Section End -->
+
+<br>
+<div class="row center">
+  <a class="btn-large teal darken-4 hvr-grow" href="/interviews/index">
+  Browse Interviews
+  </a>
 </div>
