--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -9,13 +9,13 @@
       <div class="col l3 s12">
         <ul>
           <li><a class="white-text" href="/home/index">About</a></li>
-          <li><a class="white-text" href="/home/contact">Contact</a></li>          
+          <li><a class="white-text" href="/home/contact">Contact</a></li>
+          <li><a class="white-text" href="/interviews/directory">Case Directory</a></li>          
         </ul>
       </div>
       
       <div class="col l3 s12">
         <ul>
-          <li><a class="white-text" href="/people/case_directory">Case Directory</a></li>
 
         </ul>
       </div>
