--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -6,20 +6,15 @@
     
     <ul class="right hide-on-med-and-down">
       <li><a href="/home/index">About</a></li>
-      <li><a href="/people/contact">Contact</a></li>
-      <li><a href="/home/directory">Directory</a></li>
+      <li><a href="/home/contact">Contact</a></li>
+      <li><a href="/interviews/index">Interviews</a></li>
     </ul>
 
     <ul id="nav-mobile" class="side-nav teal darken-4">
-      <li><img src="http://www.vactualpapers.com/web/wallpapers/material-design-hd-wallpaper-no-0295/thumbnail/lg.png" width="100%"></li>
+      <li><img src="https://4.bp.blogspot.com/-SOwlSY_1TlQ/VGDoWuuwYhI/AAAAAAAAB_M/v5rL5n38FGE/s1600/background_03.png" width="100%"></li>
       <li><a href="/home/index">About</a></li>
-      <li><a href="/people/case_directory" class="white-text">Case Directory</a></li>
-      <li><a href="/home/ethical_framework">Ethical Framework</a></li>
-      <li><a href="/home/inspiration">Inspiration</a></li>
-      <li><a href="/projects/index">Projects</a></li>
-      <li><a href="/people/index">People</a></li>
-      <li><a href="/home/resources">Resources</a></li>
-      <li><a href="/home/submit">Submit Story</a></li>
+      <li><a href="/home/contact">Contact</a></li>
+      <li><a href="/interviews/index">Interviews</a></li>
     </ul>
     <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="material-icons">menu</i></a>
   </div>
