refactoring index and show views for interviews, added will_paginate

--- a/app/views/interviews/index.html.erb
+++ b/app/views/interviews/index.html.erb
@@ -12,8 +12,33 @@
   </form>
 </div>
 
+<% @interviews.each do |interview| %>
+  <div class="row">
+    <div class="col s12 m12">
+      <div class="card green lighten-5">
+        <div class="card-content black-text">
+          <span class="card-title">
+            <b><%= link_to interview.name, interviews_show_path(interview) %></b>
+          </span>
+          
+          <p align="justify"><b>Duration: </b> <%= interview.duration %> </p>
+          
+          <% if interview.languages != "" %>
+            <p align="justify"><b>Languages:</b> <%= interview.languages.join(", ") %> </p>
+          <% end %>
 
-<div class="row">
+          <% if interview.themes != "" %>
+            <p align="justify"><b>Themes:</b> <%= interview.themes.join(", ") %> </p>
+          <% end %>
+        </div>  
+      </div>
+    </div>
+  </div>  
+<% end %>
+
+
+
+<!-- <div class="row">
   <table class="highlight centered responsive-table" id="interview-table">
     <thead>
       <tr>
@@ -39,4 +64,4 @@
   </table>
 </div>
       
-
+ -->
