--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -32,7 +32,7 @@ main {
 
 
 p {
-  font-size: 18px;
+  font-size: 20px;
 }
 
 .container {
@@ -71,7 +71,32 @@ p {
 }
 
 .interview-audio {
-  margin-top: 10px;
-  margin-left: 0px;
+  margin-top: 45px;
+  margin-bottom: 18px;
   width: 100%;
+}
+
+// 
+audio:hover, audio:focus, audio:active
+{
+-webkit-box-shadow: 15px 15px 20px rgba(0,0, 0, 0.4);
+-moz-box-shadow: 15px 15px 20px rgba(0,0, 0, 0.4);
+box-shadow: 15px 15px 20px rgba(0,0, 0, 0.4);
+-webkit-transform: scale(1.05);
+-moz-transform: scale(1.05);
+transform: scale(1.05);
+}
+
+audio
+{
+-webkit-transition:all 0.5s linear;
+-moz-transition:all 0.5s linear;
+-o-transition:all 0.5s linear;
+transition:all 0.5s linear;
+-moz-box-shadow: 2px 2px 4px 0px #004D40;
+-webkit-box-shadow:  2px 2px 4px 0px #004D40;
+box-shadow: 2px 2px 4px 0px #004D40;
+-moz-border-radius:7px 7px 7px 7px ;
+-webkit-border-radius:7px 7px 7px 7px ;
+border-radius:7px 7px 7px 7px ;
 }
