--- a/app/views/interviews/show.html.erb
+++ b/app/views/interviews/show.html.erb
@@ -1,18 +1,52 @@
 <div class="row">
   <div class="col s12 m4">
-    <h3><%=@interview.name%></h3>
-    <h5>Gender: <%=@interview.gender%></h5>  
-    <h5>Duration: <%=@interview.duration%></h5>  
-    <h5>Language: <%=@interview.language%></h5>  
-    <h5>Interview Conducted On: <%=@interview.date%></h5> 
-    <br>
-    <h5> Audio: </h5>
-    <audio controls class="interview-audio">
-       <source src=<%=@interview.audio_url%> type = "audio/mpeg">
-    </audio>
+    <h2><%=@interview.name%></h2>
+    
+    <% if @interview.interview_date != ""%>
+       <b>Date of Interview:</b> <%=@interview.interview_date%></p>  
+    <% end %>
+
+    <% if @interview.interview_location != ""%>
+       <b>Location of Interview:</b> <%=@interview.interview_location%></p>  
+    <% end %>
+
+    <% if @interview.place_of_birth != ""%>
+       <b>Place of Birth:</b> <%=@interview.place_of_birth%></p>
+    <% end %>
+
+    <% if @interview.current_residence != ""%>
+       <b>Current Residence:</b> <%=@interview.current_residence%></p>  
+    <% end %>
+
+    <% if @interview.hometown != ""%>
+       <b>Hometown:</b> <%=@interview.hometown%></p>  
+    <% end %>
+
+    <% if @interview.religion != ""%>
+       <b>Religion:</b> <%=@interview.religion%></p>  
+    <% end %>
+
+    <% if @interview.languages != ""%>
+       <b>Languages:</b> <%=@interview.languages.join(", ")%></p>  
+    <% end %>
+
+    <% if @interview.themes != ""%>
+       <b>Themes:</b> <%=@interview.themes.join(", ")%></p> 
+    <% end %>
+
+    <% if @interview.mode_of_violence != ""%>
+       <b>Mode of Violence:</b> <%=@interview.mode_of_violence%></p>  
+    <% end %>
+
+    <% if @interview.duration != ""%>
+       <b>Duration:</b> <%=@interview.duration%></p>  
+    <% end %>
   </div>
   
   <div class="col s12 m8">
+    <audio controls class="interview-audio">
+       <source src=<%=@interview.audio_url%> type = "audio/mpeg">
+    </audio>
   <br>
     <embed src="https://cdn.rawgit.com/alif-bae/regional-archive-assets/5eca46cc/pdf/AbdulHameedInterview.docx.pdf" width="100%" height="1000" type='application/pdf'>
   </div>
